fix russian version

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                   >
                   <input required id="sc" type="text" class="card-calc-input" />
                 </div>
-                <div class="card-calc-units__last">
+                <div class="card-calc-units card-calc-units__last">
                   <label for="" class="card-calc-lable"
                     >Roughness coefficient 'n'</label
                   >
@@ -102,7 +102,7 @@
                   <label for="" class="card-calc-lable">Q calculated</label>
                   <input readonly id="qc" type="text" class="card-calc-input" />
                 </div>
-                <div class="card-calc-units__last">
+                <div class="card-calc-units card-calc-units__last">
                   <label for="" class="card-calc-lable"
                     >Filling depth 'h'
                   </label>
