--- a/ru.html
+++ b/ru.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./index.css" />
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="favicon" href="./icon.png" />
     <title>DepthCalcJS</title>
   </head>
   <body class="body">
